Create and get listings made
