# lab1/src/main/java/ru/ifmo/blps/controller/RentController.java
@@ -1,30 +1,48 @@
 package ru.ifmo.blps.controller;
 
-import org.openapitools.model.ListingRequest;
-import org.openapitools.model.ListingsResponse;
-import org.openapitools.model.RentListingResponse;
+
+import lombok.extern.slf4j.Slf4j;
+import org.openapitools.model.RentListingRequest;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
+import ru.ifmo.blps.model.RentListing;
+import ru.ifmo.blps.service.ListingsService;
+import ru.ifmo.blps.utils.convertors.RentListingConvertor;
+import ru.ifmo.blps.worker.ListingStrategy;
+import ru.ifmo.blps.worker.rent.RentStrategy;
 
-import java.util.ArrayList;
 import java.util.List;
 
+@Slf4j
 @RestController
 public class RentController {
 
+    private ListingStrategy<RentListing> listingStrategy;
+
+    private RentListingConvertor rentListingConvertor;
+
+    @Autowired
+    public RentController(RentListingConvertor rentListingConvertor, ListingsService listingsService) {
+        this.rentListingConvertor = rentListingConvertor;
+        this.listingStrategy = new RentStrategy(listingsService);
+    }
+
     @GetMapping("/rent/listings")
-    public ResponseEntity<List<ListingsResponse>> getRentListings() {
-        // Здесь должна быть логика получения списка объявлений на аренду
-        return ResponseEntity.ok(new ArrayList<>());
+    public ResponseEntity<List<RentListing>> getSaleListings() {
+        List<RentListing> saleListings = listingStrategy.getAllListings();
+        log.info("Получено " + saleListings.size() + " объявлений");
+        return ResponseEntity.ok(saleListings);
     }
 
     @PostMapping("/rent/listings")
-    public ResponseEntity<RentListingResponse> createRentListing(@RequestBody ListingRequest request) {
-        // Здесь должна быть логика создания объявления на аренду
-        return ResponseEntity.ok(new RentListingResponse());
+    public ResponseEntity<RentListing> createSaleListing(@RequestBody RentListingRequest request) {
+        RentListing listing = rentListingConvertor.dto2Model(request);
+        listingStrategy.addListing(listing);
+        return ResponseEntity.ok(null);
     }
 
 
