# lab1/src/main/resources/api-spec.yaml
@@ -13,12 +13,6 @@ paths:
       responses:
         '200':
           description: A list of sale listings
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/ListingsResponse'
         '404':
           description: No sale listings found
     post:
@@ -29,14 +23,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ListingRequest'
+              $ref: '#/components/schemas/SaleListingRequest'
       responses:
         '201':
           description: Successfully created sale listing
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SaleListingResponse'
+                $ref: '#/components/schemas/SaleListingsResponse'
         '400':
           description: Bad request
   /rent/listings:
@@ -46,12 +40,7 @@ paths:
       responses:
         '200':
           description: A list of rent listings
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/ListingsResponse'
+
         '404':
           description: No rent listings found
     post:
@@ -62,7 +51,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ListingRequest'
+              $ref: '#/components/schemas/SaleListingRequest'
       responses:
         '201':
           description: Successfully created rent listing
@@ -74,7 +63,7 @@ paths:
           description: Bad request
 components:
   schemas:
-    ListingRequest:
+    SaleListingRequest:
       type: object
       required:
         - city
@@ -111,23 +100,13 @@ components:
           example: 1200.3
           description: Area of the property in square meters
         price:
-          type: number
-          format: float
+          type: integer
           example: 10000
           description: Monthly rent price in RUB for rent and full price for sale
         description:
           type: string
           description: Detailed description of the property
           maxLength: 400
-    SaleListingResponse:
-      type: object
-      properties:
-        listingId:
-          type: string
-          description: Unique identifier for the newly created sale listing
-        status:
-          type: string
-          description: Status of the sale listing creation
     RentListingResponse:
       type: object
       properties:
@@ -137,40 +116,103 @@ components:
         status:
           type: string
           description: Status of the rent listing creation
-    ListingsResponse:
+    SaleListingsResponse:
       type: object
       properties:
-        listingId:
+        listings:
+          type: array
+          items:
+            type: object
+            required:
+              - listingId
+              - title
+              - type
+              - address
+              - area
+              - rooms
+              - price
+              - status
+            properties:
+              listingId:
+                type: string
+                description: Unique identifier for the listing
+              title:
+                type: string
+                maxLength: 30
+              type:
+                type: string
+                enum: [ apartment, house, commercial ]
+                description: The type of property
+              address:
+                type: string
+                description: Full address of the property
+              area:
+                type: number
+                format: float
+                description: Area of the property in square meters
+              rooms:
+                type: integer
+                description: Number of rooms
+              price:
+                type: integer
+                description: Price of the property in USD for sale or monthly rent for rent
+              description:
+                type: string
+                description: Detailed description of the property
+              status:
+                type: string
+                enum:
+                  - created
+                  - verify
+                  - listed
+
+    RentListingRequest:
+      type: object
+      required:
+        - city
+        - street
+        - house
+        - flat
+        - rooms
+        - area
+        - monthlyRent
+        - price
+        - minDuration
+        - description
+      properties:
+        city:
           type: string
-          description: Unique identifier for the listing
-        type:
+          maxLength: 30
+          example: "Saint Petersburg"
+        street:
           type: string
-          enum: [ apartment, house, commercial ]
-          description: The type of property
-        operation:
-          type: string
-          enum: [ sale, rent ]
-          description: Type of operation (sale or rent)
-        address:
-          type: string
-          description: Full address of the property
+          maxLength: 30
+          example: "Kronverkskiy Prospekt"
+        house:
+          type: integer
+          example: 49
+        building:
+          type: integer
+          example: 1
+        rooms:
+          type: integer
+          example: 44
+          description: Number of rooms
         area:
           type: number
           format: float
+          example: 1200.3
           description: Area of the property in square meters
-        rooms:
-          type: integer
-          description: Number of rooms
         price:
-          type: number
-          format: float
-          description: Price of the property in USD for sale or monthly rent for rent
+          type: integer
+          example: 10000
+          description: Monthly rent price in RUB for rent and full price for sale
+        minDuration:
+          type: integer
+          example: 12
+          minimum: 0
+          description: Minimum month to rent
         description:
           type: string
           description: Detailed description of the property
-        photos:
-          type: array
-          items:
-            type: string
-            format: uri
-          description: URLs to photos of the property
+          maxLength: 400
